[package]
name = "apollo-federation-cli"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE"

[dependencies]
apollo-compiler.workspace = true
apollo-federation = { path = "..", features = ["correctness"] }
clap = { version = "4.5.1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0.114", features = [
    "preserve_order",
] }
anyhow = "1"

[dev-dependencies]
insta = { version = "1.38.0", features = ["json", "redactions"] }
serde = { version = "1.0.197", features = ["derive"] }