# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "apollo-router-scaffold-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apollo-router-scaffold-test"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
apollo-router = { path ="../../apollo-router" }
async-trait = "0.1.52"
futures = "0.3.21"
schemars = "0.8.10"
serde = "1.0.149"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tracing = "0.1.37"

# this makes build scripts and proc macros faster to compile
[profile.dev.build-override]
strip = "debuginfo"
incremental = false
