[package]
name = "apollo-router-benchmarks"
version = "0.1.0-alpha.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2018"
license = "LicenseRef-ELv2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
apollo-router = { path = "../apollo-router", features = ["post-processing"] }
apollo-router-core = { path = "../apollo-router-core" }
criterion = { version = "0.3", features = ["async_tokio", "async_futures"] }
futures = "0.3.18"
once_cell = "1"
serde_json = { version = "1.0.70", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.2", features = ["json", "env-filter"] }



[[bench]]
name = "basic_composition"
harness = false
