[package]
name = "apollo-router-core"
version = "0.1.0-prealpha.1"
authors = ["Apollo Graph, Inc. <opensource@apollographql.com>"]
edition = "2018"
license-file = "./LICENSE"

[features]
# Prevents the query execution to continue if any error occurs while fetching
# the data of a subgraph. This is useful in development as you want to be
# alerted early when something is wrong instead of receiving an invalid result.
failfast = []

[dependencies]
apollo-parser = { git = "https://github.com/apollographql/apollo-rs.git", rev = "c6418141de4505e317ca30c97ac9e26bab8df0f0" }
async-trait = "0.1.51"
derivative = "2.2.0"
displaydoc = "0.2"
futures = "0.3.17"
include_dir = "0.6.2"
log = "0.4.14"
once_cell = "1.8.0"
parking_lot = "0.11.2"
router-bridge = { git = "https://github.com/apollographql/federation.git" }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.68", features = ["preserve_order"] }
thiserror = "1.0.30"
tokio = { version = "1.12.0", features = ["rt"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
typed-builder = "0.9.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "async_futures"] }
mockall = "0.10.2"
once_cell = "1"
static_assertions = "1"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "basic_composition"
harness = false
