[package]
name = "apollo-router-core"
version = "0.1.0-alpha.1"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2018"
license-file = "./LICENSE"

[features]
# Prevents the query execution to continue if any error occurs while fetching
# the data of a subgraph. This is useful in development as you want to be
# alerted early when something is wrong instead of receiving an invalid result.
failfast = []

[dependencies]
apollo-parser = { git = "https://github.com/apollographql/apollo-rs.git", rev = "6e8e8a8b23c5489fdb2154029488dfcfe9cba80a" }
async-trait = "0.1.51"
derivative = "2.2.0"
displaydoc = "0.2"
futures = "0.3.18"
include_dir = "0.7.1"
once_cell = "1.8.0"
router-bridge = { git = "https://github.com/apollographql/federation.git", rev = "3aa8f3a533f19e31ab984c87a0674ec78c42ebb6" }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = { version = "1.0.72", features = ["preserve_order"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
typed-builder = "0.9.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio", "async_futures"] }
insta = "1.8.0"
mockall = "0.10.2"
once_cell = "1"
static_assertions = "1"
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.2", default-features = false, features = [
    "env-filter",
    "fmt",
] }

[[bench]]
name = "basic_composition"
harness = false
