[package]
name = "apollo-router"
version = "0.1.0-alpha.0"
authors = ["Apollo Graph, Inc. <packages@apollographql.com>"]
edition = "2018"
license-file = "./LICENSE"

[[bin]]
name = "router"
path = "src/main.rs"

[features]
default = ["otlp-tonic"]
otlp-tonic = [
    "opentelemetry-otlp/tonic",
    "opentelemetry-otlp/tonic-build",
    "opentelemetry-otlp/prost",
    "tonic",
]
otlp-grpcio = ["opentelemetry-otlp/grpc-sys", "opentelemetry-otlp/openssl"]
otlp-http = ["opentelemetry-otlp/http-proto"]
tls = ["opentelemetry-otlp/tls", "tonic/transport", "tonic/tls"]

[dependencies]
anyhow = "1.0.45"
apollo-router-core = { path = "../apollo-router-core" }
async-trait = "0.1.51"
bytes = "1.1.0"
derivative = "2.2.0"
derive_more = "0.99.16"
directories = "4.0.1"
displaydoc = "0.2"
futures = { version = "0.3.17", features = ["thread-pool"] }
hotwatch = "0.4.6"
hyper = { version = "0.14.15", features = ["server"] }
once_cell = "1.8.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "serialize"] }
opentelemetry-jaeger = { version = "0.15.0", features = [
    "collector_client",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.9.0", default-features = false, features = [
    "serialize",
], optional = true }
reqwest = { version = "0.11.6", features = ["json", "stream"] }
reqwest-middleware = "0.1.2"
reqwest-tracing = { version = "0.1.3", features = ["opentelemetry_0_16"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.71"
serde_yaml = "0.8.21"
structopt = "0.3.25"
task-local-extensions = "0.1.1"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
tonic = { version = "0.5.2", optional = true }
tracing = "0.1.29"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.25"
typed-builder = "0.9.1"
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "0.3.2", default-features = false, features = [
    "compression",
] }

[dev-dependencies]
apollo-router-core = { path = "../apollo-router-core", features = ["post-processing"] }
httpmock = "0.6.4"
insta = "1.8.0"
maplit = "1.0.2"
mockall = "0.10.2"
reqwest = { version = "0.11.6", features = ["json", "stream"] }
test-env-log = { version = "0.2.7", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { version = "0.2.25", default-features = false, features = [
    "env-filter",
    "fmt",
] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["apollo-router-core/post-processing"]
